<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">果蔬管理系统</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="action_exit">退出</string>
    <string name="action_add">添加商品</string>
    <string name="action_manage">管理商品</string>
    <string name="passworType">abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%^&amp;*()_-=+[{]}\|;:\'\",&gt;&lt;./?</string>
    <string name="title_back">返回</string>
    <string name="uin_hint">请输入手机号</string>
    <string name="buyer">买家</string>
	<string name="seller">卖家</string>
	<string name="open_drawer">打开Drawer</string>
	<string name="close_drawer">关闭Drawer</string>
	<string name="draweritem_main">主页</string>
	<string name="draweritem_order">我的订单</string>
	<string name="draweritem_bill">我的账单</string>
	<string name="goodsPrice">元/斤</string>
	<string name="upload">上传</string>
	<string name="cancle">取消</string>
	<string name="buy">购买</string>
	<string name="commit_order">提交订单</string>
</resources>

